add function menu

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="main">
+       <div id="header">
+           <ul class="nav">
+               <li class="nav-element"><a href="" class="nav-content">Home</a></li>
+               <li class="nav-element"><a href="" class="nav-content">Band</a></li>
+               <li class="nav-element"><a href="" class="nav-content">Tour</a></li>
+               <li class="nav-element"><a href="" class="nav-content">Contact</a></li>
+               <li class="nav-element"><a href="" class="nav-content">More</a>
+                <ul class="sub-nav">
+                    <li class="sub-nav-element"><a href="" class="sub-nav-content">Mechardise</a></li>
+                    <li class="sub-nav-element"><a href="" class="sub-nav-content">Extras</a></li>
+                    <li class="sub-nav-element"><a href="" class="sub-nav-content">Media</a></li>
+                </ul>
+
+            </li>
+           </ul>
+           <div class="search">
+               <i class="fa fa-search" aria-hidden="true"></i>
+               
+           </div>
+       </div>
+    </div>
 </body>
 </html>
