--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
 <body>
     <div id="main">
        <div id="header">
+           <!--nav tablet and pc-->
            <ul class="nav">
                <li class="nav-element"><a href="" class="nav-content">Home</a></li>
                <li class="nav-element"><a href="" class="nav-content">Band</a></li>
@@ -27,8 +28,33 @@
            </ul>
            <div class="search">
                <i class="fa fa-search" aria-hidden="true"></i>
-               
            </div>
+           <!--nav mobile-->
+           <label class="button-menu" for="checkedd">
+               <i class="fa fa-bars" aria-hidden="true"></i>
+           </label>
+           <input type="checkbox" class="check" id="checkedd">
+           <ul class="nav-mobile">
+               <li class="nav-mobile-element"><a href="" class="nav-mobile-content">Home</a></li>
+               <li class="nav-mobile-element"><a href="" class="nav-mobile-content">Band</a></li>
+               <li class="nav-mobile-element"><a href="" class="nav-mobile-content">Tour</a>
+               </li>
+               <li class="nav-mobile-element"><a href="" class="nav-mobile-content">Contact</a></li>
+               <li class="nav-mobile-element"><a href="" class="nav-mobile-content">More </a>
+                   <ul class="sub-nav-mobile">
+                       <li class="sub-nav-mobile-element"><a href="" class="sub-nav-mobile-content">Merchandise</a></li>
+                       <li class="sub-nav-mobile-element"><a href="" class="sub-nav-mobile-content">Extras</a></li>
+                       <li class="sub-nav-mobile-element"><a href="" class="sub-nav-mobile-content">Media</a></li>
+                   </ul>
+              </li>
+              <label class="button-close" for="checkedd">
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </label>
+           </ul>
+           <label class="overlay" for="checkedd">
+           </label>
+       </div>
+       <div id="slider">
        </div>
     </div>
 </body>
