fix hover fon safari

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                <li class="nav-element"><a href="" class="nav-content">Band</a></li>
                <li class="nav-element"><a href="" class="nav-content">Tour</a></li>
                <li class="nav-element"><a href="" class="nav-content">Contact</a></li>
-               <li class="nav-element"><a href="" class="nav-content">More</a>
+               <li class="nav-element"><a href="" class="nav-content" onclick="">More</a>
                 <ul class="sub-nav">
                     <li class="sub-nav-element"><a href="" class="sub-nav-content">Mechardise</a></li>
                     <li class="sub-nav-element"><a href="" class="sub-nav-content">Extras</a></li>
@@ -27,7 +27,7 @@
             </li>
            </ul>
            <div class="search">
-               <i class="fa fa-search" aria-hidden="true"></i>
+               <i class="fa fa-search" aria-hidden="true" onclick=""></i>
            </div>
            <!--nav mobile-->
            <label class="button-menu" for="checkedd">
@@ -40,7 +40,7 @@
                <li class="nav-mobile-element"><a href="" class="nav-mobile-content">Tour</a>
                </li>
                <li class="nav-mobile-element"><a href="" class="nav-mobile-content">Contact</a></li>
-               <li class="nav-mobile-element"><a href="" class="nav-mobile-content">More </a>
+               <li class="nav-mobile-element"><a href="" class="nav-mobile-content" onclick="">More  </a>
                    <ul class="sub-nav-mobile">
                        <li class="sub-nav-mobile-element"><a href="" class="sub-nav-mobile-content">Merchandise</a></li>
                        <li class="sub-nav-mobile-element"><a href="" class="sub-nav-mobile-content">Extras</a></li>
