--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="header">
+
+    </div>
+    <div id="slider">
+
+    </div>
+    <div id="about">
+
+    </div>
+    <div id="tour-date">
+
+    </div>
+    <div id="contact">
+
+    </div>
+    <div id="map">
+
+    </div>
+    <div id="footer">
+        
+    </div>
 </body>
 </html>
