--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        </div>
     </div>
     <div id="slider">
-          <div class="sliders">
+          <div class="sliders" id="first-slide">
               <div class="slide">
                   <div class="text-slide">
                       <h3> New York
