--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
             We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </div>
          <div class="third">
-            <div class="menber">
+            <div class="member">
                 <p>Name</p>
                 <img src="assets/image/bandmember.jpg" alt="">
             </div>
-            <div class="menber">
+            <div class="member">
                 <p>Name</p>
                 <img src="assets/image/bandmember.jpg" alt="">
             </div>
-            <div class="menber">
+            <div class="member">
                 <p>Name</p>
                 <img src="assets/image/bandmember.jpg" alt="">
             </div>
