--- a/index.html
+++ b/index.html
@@ -109,7 +109,58 @@
         </div>
     </div>
     <div id="tour-date">
-
+        <text class="heading">
+            <h1> Tour Dates
+            </h1>
+            <p>Remember to book your tickets!</p>
+        </text>
+        <ul class="schedule">
+           <li>September </li>
+           <li>October </li>
+           <li>November</li>
+        </ul>
+        <div class="tickets">
+            <div class="ticket">
+                <img src="assets/image/newyork.jpg" alt="">
+                <div class="text">
+                <h4>New York</h4>
+                <p>Fri 27 Nov 2016</p>
+                <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <a href="#a" class="btn-buy">Buy Tickets</a>
+                </div>
+            </div>
+            <div class="ticket">
+                <img src="assets/image/paris.jpg" alt="">
+                <div class="text">
+                <h4>Paris</h4>
+                <p>Sat 28 Nov 2016</p>
+                <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <a href="#a" class="btn-buy">Buy Tickets</a>
+                </div>
+            </div>
+            <div class="ticket">
+                <img src="assets/image/sanfran.jpg" alt="">
+                <div class="text">
+                <h4>San Francisco</h4>
+                <p>Sun 29 Nov 2016</p>
+                <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <a href="#a" class="btn-buy">Buy Tickets</a>
+                </div>
+            </div>
+        </div>
+        <div class="ticket-sell">
+        <i class="fa fa-times close-sell" aria-hidden="true"></i>
+        <h1> <i class="fa fa-suitcase" aria-hidden="true"></i> Tickets</h1>
+        <p> <i class="fa fa-shopping-cart" aria-hidden="true"></i> Tickets, $15 per person</p>
+        <input type="text" name="" id="" placeholder="How many?">
+        <p> <i class="fa fa-user" aria-hidden="true"></i> Send To</p>
+        <input type="text" name="" id="" placeholder="Enter email">
+        <a href="#a" class="btn-pay">Pay <i class="fa fa-check" aria-hidden="true"></i> </a>
+        <div class="foot-ticket">
+          <a href="#a" class="btn-close close-sell">Close <i class="fa fa-times " aria-hidden="true"></i></a>
+          <p>Need<a href="#">Help</a></p>
+         </div>
+      </div>
     </div>
     <div id="contact">
 
