--- a/index.html
+++ b/index.html
@@ -163,7 +163,24 @@
       </div>
     </div>
     <div id="contact">
-
+        <text class="heading">
+            <h1> CONTACT
+            </h1>
+            <p>Fan? Drop a note!</p>
+            <div class="form-contact">
+                <div class="infor-address .col_haft">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Chicago, US</p>
+                    <p><i class="fa fa-phone" aria-hidden="true"></i> Phone: +00 151515</p>
+                    <p><i class="fa fa-envelope" aria-hidden="true"></i> Chicago, US</p>
+                </div>
+                <div class="form ">
+                    <input type="text" class="name" placeholder="Name">
+                    <input type="email" class="email" placeholder="Email">
+                    <input type="text" class="message " placeholder="Message">
+                    <a href="#a" class="send-btn">Send</a>
+                </div>
+            </div>
+        </text>
     </div>
     <div id="map">
 
