--- a/index.html
+++ b/index.html
@@ -183,10 +183,17 @@
         </text>
     </div>
     <div id="map">
- 
     </div>
     <div id="footer">
-
+      <div class="footer-icon">
+           <i class="fa fa-facebook" aria-hidden="true"></i>
+           <i class="fa fa-instagram" aria-hidden="true"></i>
+           <i class="fa fa-snapchat" aria-hidden="true"></i>
+           <i class="fa fa-pinterest" aria-hidden="true"></i>
+           <i class="fa fa-twitter" aria-hidden="true"></i>
+           <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </div>
+      <p class="copy-right">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> by <a href="https://github.com/GitCuaManhNe-Ahihi">GitCuaManhNe-Ahihi</a></p>
     </div>
     <script src="assets/javascript/main.js"></script>
 </body>
